<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="se.mah.ad0025.inluppg2.ImageFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvImageInfo"/>

    <EditText
        android:id="@+id/etImageText"
        android:inputType="textCapSentences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:hint="@string/imageTextHint"/>

    <Button
        android:id="@+id/btnSendImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSendImage"/>

</LinearLayout>
